--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,4 +30,4 @@ jobs:
     #     GOPROXY: "https://proxy.golang.org"
     #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
     #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: go test -v ./test
+      run: sudo go test -v ./test
